--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
   <title>Web Studio</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <!--Голова сайта-->
   <header>
-    <a class="logo" href=""><span class="logotip">Web</span>Studio</a>
+    <a class="logo link" href=""><span class="logotip">Web</span>Studio</a>
     <nav class="site-nav">
-      <ul class="site-nav-list list-type">
-        <li><a class="current" href="./index.html">Студия</a></li>
-        <li><a href="./portfolio.html">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+      <ul class="site-nav-list list list-type">
+        <li><a class="link current" href="./index.html">Студия</a></li>
+        <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+        <li><a class="link" href="">Контакты</a></li>
       </ul>
     </nav>
-    <ul class="address list-type">
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="address list list-type">
+      <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
     <!--Тело сайта-->
@@ -34,8 +37,8 @@
     </section>
     <!--Секция Особенности-->
     <section class="features">
-      <h2 class="features-title">Особенности</h2> <!--скроется при стилизации-->
-      <ul class="features-list list-type">
+      <h2 class="features-title visually-hidden">Особенности</h2> <!--скроется при стилизации-->
+      <ul class="features-list list list-type">
         <li>
           <h3>Внимание к деталям</h3>
           <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -57,7 +60,7 @@
     <!--Секция чем мы занимаемся-->
     <section class="work">
       <h2 class="work-title">Чем мы занимаемся</h2>
-      <ul class="work-list list-type">
+      <ul class="work-list list list-type">
         <li>
           <img src="./images/box-1.jpg" alt="разработка приложения" width="370" height="294">
         </li>
@@ -72,7 +75,7 @@
     <!--Секция наша команда-->
     <section class="team">
       <h2 class="team-title">Наша команда</h2>
-      <ul class="list-type">
+      <ul class="list list-type">
         <li class="team-design">
           <img src="./images/img.jpg" alt="product designer" width="270" height="260">
           <h3>Игорь Демьяненко</h3>
@@ -98,9 +101,9 @@
   </main>
   <!--Подвал сайта-->
   <footer>
-    <a class="logo-foot" href=""><span class="logotip">Web</span>Studio</a>
+    <a class="logo-foot link" href=""><span class="logotip">Web</span>Studio</a>
     <address>
-      <ul class="address-foot list-type">
+      <ul class="address-foot list list-type">
         <li><a href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
