--- a/portfolio.html
+++ b/portfolio.html
@@ -7,29 +7,32 @@
   <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <!--Голова сайта-->
   <header>
-    <a class="logo" href=""><span class="logotip">Web</span>Studio</a>
+    <a class="logo link" href=""><span class="logotip">Web</span>Studio</a>
     <nav class="site-nav">
-      <ul class="site-nav-list list-type">
-        <li><a href="./index.html">Студия</a></li>
-        <li><a class="current" href="./portfolio.html">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+      <ul class="site-nav-list list list-type">
+        <li><a class="link" href="./index.html">Студия</a></li>
+        <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+        <li><a class="link" href="">Контакты</a></li>
       </ul>
     </nav>
-    <ul class="address list-type">
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="address list list-type">
+      <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
   <!--Тело сайта-->
   <main>
     <section class="portfol">
-      <h1 class="portfol-title">Наше портфолио</h1> <!--нужен для разметки.скроется при стилизации-->
-      <ul class="portfol-list list-type">
+      <h1 class="portfol-title visually-hidden">Наше портфолио</h1> <!--нужен для разметки.скроется при стилизации-->
+      <ul class="portfol-list list list-type">
         <li><button type="button">Все</button></li>
         <li><button type="button">Веб-сайты</button></li>
         <li><button type="button">Приложения</button></li>
@@ -37,8 +40,8 @@
         <li><button type="button">Маркетинг</button></li>
       </ul>
       <!--Проекты-->
-      <h2 class="project-title">Наши проекты</h2> <!--нужен для разметки.скроется при стилизации-->
-      <ul class="project-list list-type">
+      <h2 class="project-title visually-hidden">Наши проекты</h2> <!--нужен для разметки.скроется при стилизации-->
+      <ul class="project-list list list-type">
         <li>
           <img src="./images/img1.jpg" alt="Просмотр сайта" width="370" height="294">
           <h3>Технокряк</h3>
@@ -91,11 +94,11 @@
   <footer>
     <a class="logo-foot" href=""><span class="logotip">Web</span>Studio</a>
     <address>
-      <ul class="address-foot list-type">
-        <li><a href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев, пр-т Леси
+      <ul class="address-foot list list-type">
+        <li><a class="link" href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев, пр-т Леси
             Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer>
