--- a/index.html
+++ b/index.html
@@ -14,101 +14,115 @@
 </head>
 <body>
   <!--Голова сайта-->
-  <header>
-    <a class="logo link" href=""><span class="logotip">Web</span>Studio</a>
-    <nav class="site-nav">
-      <ul class="site-nav-list list list-type">
-        <li><a class="link current" href="./index.html">Студия</a></li>
-        <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-        <li><a class="link" href="">Контакты</a></li>
+  <header class="header">
+    <div class="container">
+      <a class="logo link" href=""><span class="logotip">Web</span>Studio</a>
+      <nav class="site-nav">
+        <ul class="site-nav-list list list-type">
+          <li class="nav-item"><a class="link current" href="./index.html">Студия</a></li>
+          <li class="nav-item"><a class="link portfol-nav" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a class="link" href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="address list list-type">
+        <li><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </nav>
-    <ul class="address list list-type">
-      <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
+    </div>
   </header>
     <!--Тело сайта-->
   <main>
     <!--Секция герой-->
     <section class="hero">
-      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-      <button class="button-primary" type="button">Заказать услугу</button>
+      <div class="container">
+        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+        <button class="button-primary" type="button">Заказать услугу</button>
+      </div>
     </section>
     <!--Секция Особенности-->
-    <section class="features">
-      <h2 class="features-title visually-hidden">Особенности</h2> <!--скроется при стилизации-->
-      <ul class="features-list list list-type">
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-      </ul>
+    <section class="features section">
+      <div class="container">
+        <h2 class="features-title visually-hidden">Особенности</h2>
+        <!--скроется при стилизации-->
+        <ul class="features-list list list-type all-flexx">
+          <li class="features-item">
+            <h3 class="features-item-title">Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-item-title">Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-item-title">Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-item-title">Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!--Секция чем мы занимаемся-->
-    <section class="work">
-      <h2 class="work-title">Чем мы занимаемся</h2>
-      <ul class="work-list list list-type">
-        <li>
-          <img src="./images/box-1.jpg" alt="разработка приложения" width="370" height="294">
-        </li>
-        <li>
-          <img src="./images/box-2.jpg" alt="внедрение приложения в мобильное устройство" width="370" height="294">
-        </li>
-        <li>
-          <img src="./images/box-3.jpg" alt="использование приложения" width="370" height="294">
-        </li>
-      </ul>
+    <section class="work section">
+      <div class="container">
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="work-list list list-type all-flexx">
+          <li class="work-item">
+            <img src="./images/box-1.jpg" alt="разработка приложения" width="370" height="294">
+          </li>
+          <li class="work-item">
+            <img src="./images/box-2.jpg" alt="внедрение приложения в мобильное устройство" width="370" height="294">
+          </li>
+          <li class="work-item">
+            <img src="./images/box-3.jpg" alt="использование приложения" width="370" height="294">
+          </li>
+        </ul>
+      </div>
     </section>
     <!--Секция наша команда-->
-    <section class="team">
-      <h2 class="team-title">Наша команда</h2>
-      <ul class="list list-type">
-        <li class="team-design">
-          <img src="./images/img.jpg" alt="product designer" width="270" height="260">
-          <h3>Игорь Демьяненко</h3>
-          <p>Product Designer</p>
-        </li>
-        <li class="team-develop">
-          <img src="./images/img-2.jpg" alt="frontend developer" width="270" height="260">
-          <h3>Ольга Репина</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li class="team-mark">
-          <img src="./images/img-3.jpg" alt="marketing" width="270" height="260">
-          <h3>Николай Тарасов</h3>
-          <p>Marketing</p>
-        </li>
-        <li class="team-ui">
-          <img src="./images/img-4.jpg" alt="ui designer" width="270" height="260">
-          <h3>Михаил Ермаков</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+    <section class="team section">
+      <div class="container">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list list-type all-flexx team-list">
+          <li class="team-item">
+            <img src="./images/img.jpg" alt="product designer" width="270" height="260">
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li class="team-item">
+            <img src="./images/img-2.jpg" alt="frontend developer" width="270" height="260">
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img src="./images/img-3.jpg" alt="marketing" width="270" height="260">
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li class="team-item">
+            <img src="./images/img-4.jpg" alt="ui designer" width="270" height="260">
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <!--Подвал сайта-->
   <footer>
-    <a class="logo-foot link" href=""><span class="logotip">Web</span>Studio</a>
-    <address>
-      <ul class="address-foot list list-type">
-        <li><a href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+    <div class="container container-foot">
+      <a class="logo-foot link" href=""><span class="logotip">Web</span>Studio</a>
+      <address>
+        <ul class="address-foot list list-type">
+          <li><a href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев, пр-т Леси
+              Украинки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 </html>
