--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </ul>
       </nav>
       <ul class="address list list-type">
-        <li><a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="mail"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
