Исправляет замечания от ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
     <div class="container">
       <a class="logo link" href=""><span class="logotip">Web</span>Studio</a>
       <nav class="site-nav">
-        <ul class="site-nav-list list list-type">
+        <ul class="site-nav-list">
           <li class="nav-item"><a class="link" href="./index.html">Студия</a></li>
           <li class="nav-item"><a class="link portfol-nav current" href="./portfolio.html">Портфолио</a></li>
           <li class="nav-item"><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="address list list-type">
+      <ul class="address">
         <li class="mail"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li class="phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -36,7 +36,7 @@
       <div class="container">
         <h1 class="portfol-title visually-hidden">Наше портфолио</h1>
         <!--нужен для разметки.скроется при стилизации-->
-        <ul class="portfol-list list list-type all-flexx">
+        <ul class="portfol-list all-flexx">
           <li class="portfol-item"><button type="button">Все</button></li>
           <li class="portfol-item"><button type="button">Веб-сайты</button></li>
           <li class="portfol-item"><button type="button">Приложения</button></li>
@@ -46,7 +46,7 @@
         <!--Проекты-->
         <h2 class="project-title visually-hidden">Наши проекты</h2>
         <!--нужен для разметки.скроется при стилизации-->
-        <ul class="project-list list list-type all-flexx">
+        <ul class="project-list all-flexx">
           <li class="project-item">
             <img src="./images/img1.jpg" alt="Просмотр сайта" width="370" height="294">
             <div class="project-cards">
@@ -118,8 +118,8 @@
   <footer>
     <div class="container container-foot">
       <a class="logo-foot link" href=""><span class="logotip">Web</span>Studio</a>
-      <address>
-        <ul class="address-foot list list-type">
+      <address class="address-list">
+        <ul class="address-foot">
           <li><a class="link" href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев,
               пр-т Леси
               Украинки, 26</a></li>
