--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="container">
       <a class="logo link" href=""><span class="logotip">Web</span>Studio</a>
       <nav class="site-nav">
-        <ul class="site-nav-list list list-type">
+        <ul class="site-nav-list">
           <li class="nav-item"><a class="link current" href="./index.html">Студия</a></li>
           <li class="nav-item"><a class="link portfol-nav" href="./portfolio.html">Портфолио</a></li>
           <li class="nav-item"><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="address list list-type">
+      <ul class="address">
         <li class="mail"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li class="phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -44,7 +44,7 @@
       <div class="container">
         <h2 class="features-title visually-hidden">Особенности</h2>
         <!--скроется при стилизации-->
-        <ul class="features-list list list-type all-flexx">
+        <ul class="features-list all-flexx">
           <li class="features-item">
             <h3 class="features-item-title">Внимание к деталям</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -68,7 +68,7 @@
     <section class="work section">
       <div class="container">
         <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="work-list list list-type all-flexx">
+        <ul class="work-list all-flexx">
           <li class="work-item">
             <img src="./images/box-1.jpg" alt="разработка приложения" width="370" height="294">
           </li>
@@ -85,26 +85,34 @@
     <section class="team section">
       <div class="container">
         <h2 class="team-title">Наша команда</h2>
-        <ul class="list list-type all-flexx team-list">
+        <ul class="all-flexx team-list">
           <li class="team-item">
             <img src="./images/img.jpg" alt="product designer" width="270" height="260">
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <div class="team-cards">
+              <h3>Игорь Демьяненко</h3>
+              <p>Product Designer</p>
+            </div>
           </li>
           <li class="team-item">
             <img src="./images/img-2.jpg" alt="frontend developer" width="270" height="260">
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <div class="team-cards">
+              <h3>Ольга Репина</h3>
+              <p>Frontend Developer</p>
+            </div>
           </li>
           <li class="team-item">
             <img src="./images/img-3.jpg" alt="marketing" width="270" height="260">
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <div class="team-cards">
+              <h3>Николай Тарасов</h3>
+              <p>Marketing</p>
+            </div>
           </li>
           <li class="team-item">
             <img src="./images/img-4.jpg" alt="ui designer" width="270" height="260">
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <div class="team-cards">
+              <h3>Михаил Ермаков</h3>
+              <p>UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -114,8 +122,8 @@
   <footer>
     <div class="container container-foot">
       <a class="logo-foot link" href=""><span class="logotip">Web</span>Studio</a>
-      <address>
-        <ul class="address-foot list list-type">
+      <address class="address-list">
+        <ul class="address-foot">
           <li><a href="https://goo.gl/maps/ENBTeQWaKfRkF7op7" target="_blank" rel="noopener nofollow">г. Киев, пр-т Леси
               Украинки, 26</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
